<resources>
    <string name="app_name">Cleaning Masters</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="envoyer">Envoyer</string>
    <string name="name">Name</string>
    <string name="connexion">Sign in</string>
    <string name="dialog_connexion_invalide">Identifiant / Mot de passe  incorrecte(s)</string>
    <string name="retour">Retour</string>
    <string name="creation_nettoyeur_impossible">Impossible de créer un nettoyeur ! Veuillez vous diriger vers le batîment 3IA</string>
    <string name="OK">OK</string>
    <string name="nettoyer_cible">Déplacez-vous pour nettoyer des cibles !</string>
    <string name="erreur_position">Vous n\'êtes pas dans l\'arène, dirigez vous vers l\'université !</string>
    <string name="MainMenuTitle">Cleaning Masters</string>
    <string name="MainMenuLoginHint">John doe</string>
    <string name="MainMenuPasswordHint">●●●●●●●●●</string>
    <string name="MainMenuBoutonConnexion">Connection</string>
    <string name="BoutonVoyageCreerNettoyeur">Créer nettoyeur</string>
    <string name="TexteStatutMort">MORT</string>
    <string name="BoutonVoyageModeVoyage">Mode Voyage</string>
    <string name="TexteStatutEnVie">EN VIE</string>
    <string name="TexteStatutNettoyage">NETTOYAGE</string>
    <string name="BoutonVoyageRemise">Remise en jeu</string>
    <string name="TexteStatutPreparation">SE PREPARE A VOYAGER</string>
    <string name="TexteStatutVoyage">VOYAGE</string>
    <string name="BoutonVoyageCible">Nettoyer la cible</string>
    <string name="BoutonVoyageEnnemi">Nettoyer l\'ennemi</string>
    <string name="TexteCreationTropLoin">Vous n\'êtes pas en 3IA, création du nettoyeur impossible!</string>
    <string name="TexteCreationDelai">Le délai de 15 minutes n\'est pas terminé!</string>
    <string name="HintChatMessage">Entrer votre message</string>
    <string name="StatPersoTitre">Vos Statistiques</string>
    <string name="BoutonRetourTexte">Retour</string>
    <string name="StatEquipesTitre">Stats des équipes</string>
    <string name="ValeurVotreEquipeTitre">Valeur de votre equipe</string>
    <string name="ValeurEquipeAdverseTitre">Valeur de l\'équipe adverse</string>
    <string name="NombreNettoyeurTitre">Nombre de nettoyeur en jeu</string>
    <string name="TexteJeuReapparaitre">Déplacez-vous en 3IA pour réapparaitre</string>
    <string name="TexteJeuRemiseEnJeu">Déplacez-vous pour vous remettre en jeu</string>
</resources>
